# model-router

./: .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
model_router/: __init__.py  cli.py  models.py  registry.py  registry.yaml  scorer.py  signals.py
skill/: SKILL.md
tests/: test_cli.py  test_registry.py  test_scorer.py  test_signals.py
