[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "model-router"
version = "0.1.0"
description = "Config-driven tool that picks the right LLM for a task by scoring task signals against a model registry."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "schuligan" }]
keywords = ["llm", "routing", "model-selection", "genai", "claude", "open-models"]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# Only needed for the OPTIONAL live "explain" mode. The router itself never
# touches the network or needs a key.
live = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
route = "model_router.cli:main"

[tool.setuptools]
packages = ["model_router"]

[tool.setuptools.package-data]
model_router = ["registry.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
